--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -14,9 +14,11 @@
             </p>
         </div>
         <div class="p-4 pt-2">
-            <abbr title="Release version: v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}" class="d-inline-flex px-2 py-1 fw-semibold bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
+            <a href="{{ pkg.releases.url }}" 
+                title="Release version: v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}" 
+                class="d-inline-flex px-2 py-1 fw-semibold bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-body release-version">
                 <small>v{{ pkg.version }}{% if data.environment == 'development' %}-dev{% endif %}</small>
-            </abbr>
+            </a>
         </div>
     </div>
 </footer>
