Hotfix for covenant fonts
Typo in @font-face meant that the font wasn't being picked up correctly

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,8 +27,8 @@
     font-style: normal;
     font-weight: normal;
     font-family: 'Covenant';
-    src:  url('../fonts/Covenant.eot');
-    src:  url('../fonts/Covenant.eot?#iefix') format('embedded-opentype'),url('../fonts/Covenant.ttf') format('truetype'),url('../fonts/Covenant.woff') format('woff'),url('../assets/fonts/Covenant.svg#Covenant') format('svg');
+    src:  url('../fonts/covenant.eot');
+    src:  url('../fonts/covenant.eot?#iefix') format('embedded-opentype'),url('../fonts/covenant.ttf') format('truetype'),url('../fonts/covenant.woff') format('woff'),url('../assets/fonts/covenant.svg#Covenant') format('svg');
 }
 
 :root {
