--- a/_includes/layout/meta.liquid
+++ b/_includes/layout/meta.liquid
@@ -2,3 +2,4 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="{{ pkg.description }}">
         <meta name="author" content="{{ pkg.author }}">
+        <meta name="generator" content="{{ eleventy.generator }}">
