Turn off image transparency by default

--- a/_includes/partials/misc/braille.liquid
+++ b/_includes/partials/misc/braille.liquid
@@ -46,7 +46,7 @@
                                             <label class="form-check-label" for="brailleSwitch">Convert Text to Braille</label>
                                         </div>
                                         <div class="form-check form-switch mx-lg-2 d-flex">
-                                            <input class="form-check-input" type="checkbox" role="switch" id="brImageTransparency" checked>
+                                            <input class="form-check-input" type="checkbox" role="switch" id="brImageTransparency">
                                             <label class="form-check-label" for="brImageTransparency">Transparent background</label>
                                         </div>
                                     </div>
