--- a/_includes/partials/misc/forerunner.liquid
+++ b/_includes/partials/misc/forerunner.liquid
@@ -68,7 +68,7 @@
                         <div class="d-flex justify-content-start align-items-center">
                             <a class="btn btn-md btn-convrtr" id="generateForerunnerImage" title="Create an image from Forerunner glyphs">Create image</a>
                             <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="frImageTransparency" checked>
+                                <input class="form-check-input" type="checkbox" role="switch" id="frImageTransparency">
                                 <label class="form-check-label" for="frImageTransparency">Transparent background</label>
                             </div>
                             {% include "components/select-copy-dl" %}
