--- a/_includes/partials/misc/covenant.liquid
+++ b/_includes/partials/misc/covenant.liquid
@@ -67,7 +67,7 @@
                         <div class="d-flex justify-content-start align-items-center">
                             <a class="btn btn-md btn-convrtr" id="generateCovenantImage" title="Create an image from Covenant glyphs">Create image</a>
                             <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="covImageTransparency" checked>
+                                <input class="form-check-input" type="checkbox" role="switch" id="covImageTransparency">
                                 <label class="form-check-label" for="covImageTransparency">Transparent background</label>
                             </div>
                             {% include "components/select-copy-dl" %}
