--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,6 +9,7 @@
     </head>
     <body id="IOOBI9O4IEIEOIO4O4IB" 
           {% if page-id == "fourohfour" %}class="d-flex flex-column h-100 top-0"{% endif %}>
+          <a class="visually-hidden-focusable" href="#content">Skip to main content</a>
 
         {% include "layout/header" %}
 
