--- a/_includes/layout/footer.liquid
+++ b/_includes/layout/footer.liquid
@@ -5,6 +5,9 @@
             <p class="float-end mb-1">
                 <a href="#IOOBI9O4IEIEOIO4O4IB" class="btn btn-secondary" title="Back to top">
                     <i class="bi bi-arrow-up-square"></i>
+                    <span class="visually-hidden" focusable="false" aria-hidden="true">
+                        Back to top
+                    </span>
                 </a>
             </p>
             {% endif %}
