--- a/_includes/layout/header.liquid
+++ b/_includes/layout/header.liquid
@@ -14,7 +14,7 @@
                             title="Discord" href="{{ pkg.support }}" title="Discord"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
                             <i class="bi bi-discord"></i>
-                            <span class="d-none mx-2">Join the discord</span>
+                            <span class="visually-hidden mx-2" focusable="false" aria-hidden="false">Join the discord</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -22,7 +22,7 @@
                             title="Github" href="{{ pkg.repository.site }}" title="Github"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
                             <i class="bi bi-github"></i>
-                            <span class="d-none mx-2">Github</span>
+                            <span class="visually-hidden mx-2" focusable="false" aria-hidden="false">Github</span>
                         </a>
                     </li>
                 {% if page-id != "fourohfour" %}
@@ -31,7 +31,7 @@
                                 aria-label="Clear all data inside textareas" title="Clear data"
                                 data-bs-toggle="tooltip" data-bs-placement="bottom">
                             <i class="bi bi-recycle"></i>
-                            <span class="d-none mx-2">Clear all data</span>
+                            <span class="visually-hidden mx-2" focusable="false" aria-hidden="false">Clear all data</span>
                         </button>
                     </li>
                 {% endif %}
@@ -40,7 +40,7 @@
                         aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)" 
                         data-current-icon="bi-circle-half">
                             <i class="bi my-1 theme-icon-active bi-circle-half"></i>
-                            <span class="d-none ms-2" id="bd-theme-text">Toggle theme</span>
+                            <span class="visually-hidden ms-2" focusable="false" aria-hidden="false" id="bd-theme-text">Toggle theme</span>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end position-absolute"" aria-labelledby="bd-theme-text">
                             <li>
