--- a/_includes/partials/ciphers/hash.liquid
+++ b/_includes/partials/ciphers/hash.liquid
@@ -21,7 +21,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Hash text</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: " title="Generate hash values for a string" rows="6" id="hashText" class="form-control hash-text"></textarea>
+                        <textarea placeholder="Example: " title="Generate hash values for a string" rows="6" id="hashText" class="form-control hash-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
@@ -37,7 +37,11 @@
                                         <th scope="col">Value</th>
                                     </tr>
                                 </thead>
-                                <tbody class="data-to-copy active" id="hashResults"></tbody>
+                                <tbody class="data-to-copy active" id="hashResults">
+                                    <tr class="visually-hidden">
+                                        <td colspan="2" class="text-center">No data available</td>
+                                    </tr>
+                                </tbody>
                             </table>
                         </div>
                     </div>
