--- a/_includes/partials/hex/reversehex.liquid
+++ b/_includes/partials/hex/reversehex.liquid
@@ -1,4 +1,4 @@
-{% assign hexDelimiter = "reverseHexDelimiter" %}
+{% assign hexDelimiter = "reverseHex" %}
 <section id="reverseHex" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
@@ -25,23 +25,23 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Reverse hex</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: 47 56 37 47" title="Reverse hex nibbles" rows="6" id="reverseHexText" class="form-control reverse-hex"></textarea>
+                        <textarea placeholder="Example: 47 56 37 47" title="Reverse hex nibbles" rows="6" id="reverseHexText" class="form-control reverse-hex" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" for="reverseHexDelimiter">Delimiter</label>
+                                        <label class="input-group-text" id="reverseHexLabel">Delimiter</label>
                                         {% include "components/delimiter" %}
-                                        <button type="button" class="btn btn-md btn-convrtr me-2" id="reverseHexDecode" title="Reverse hex nibbles">Reverse</button>
+                                        <button type="button" class="btn btn-md btn-convrtr me-2" id="reverseHexDecode">Reverse</button>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
                                     <div class="row row-cols-auto g-0">
                                         <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                             <div class="form-check form-switch text-start">
-                                                <input class="form-check-input" type="checkbox" role="switch" id="reverseNibbles">
+                                                <input class="form-check-input" type="checkbox" role="switch" id="reverseNibbles" aria-checked="false">
                                                 <label class="form-check-label" for="reverseNibbles">Reverse Nibbles</label>
                                             </div>
                                         </div>
