--- a/_includes/partials/hex/shift.liquid
+++ b/_includes/partials/hex/shift.liquid
@@ -1,4 +1,4 @@
-{% assign hexDelimiter = "shiftHexDelimiter" %}
+{% assign hexDelimiter = "shiftHex" %}
 <section id="shift" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
@@ -17,7 +17,7 @@
                 Lazy shift a hexadecimal string up or down: <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">54 65 73 74</code> [test] becomes <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">55 66 74 75</code> [uftu] when shifted 1 to the right (+1) or <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">53 64 72 73</code> [Sdrs] when shifted 1 to the left. 
             </p>
             <p class="px-2">
-                The dropdown allows you to select a delimiter, which is how your hex values are split up and joined together. The default is a space, you can select no delimiter if your hex contains no spaces.
+                The dropdown allows you to select a delimiter, which is how your hex values are split up and joined together. The default is a space, you can select no delimiter if your hex contains no spaces. Negative numbers are allowed.
             </p>
         </div>
         <div class="collapse show" id="shiftHexCollapse">
@@ -25,7 +25,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Shift hex string</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: 55 66 74 75" title="Shift hex string" rows="6" id="shiftText" class="form-control shift-hex"></textarea>
+                        <textarea placeholder="Example: 55 66 74 75" title="Shift hex string" rows="6" id="shiftText" class="form-control shift-hex" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
@@ -33,11 +33,12 @@
                                 <div class="col col-12 col-md-auto me-2 mb-2">
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="basic-addon1" for="shiftValue"><span class="d-none d-md-block">Shift&nbsp;</span>Value</label>
-                                        <input type="text" class="form-control" id="shiftValue" title="Shift Hex by number, negative numbers are allowed">
+                                        <input type="text" class="form-control" id="shiftValue" autocomplete="off">
                                         <button class="btn btn-convrtr" type="button" id="shiftDecode">Shift</button>
                                     </div>
                                 </div>
                                 <div class="col d-flex flex-fill justify-content-start mb-2">
+                                    <label class="visually-hidden" id="shiftHexLabel">Shift Hex Delimiter</label>
                                     {% include "components/delimiter" %}
                                     {% include "components/select-copy-dl" %}
                                 </div>
