--- a/_includes/partials/home/convrtrs.liquid
+++ b/_includes/partials/home/convrtrs.liquid
@@ -1,4 +1,3 @@
-{% assign hexDelimiter = "hexDelimiter" %}
 <section id="convrtrs" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading">
@@ -42,8 +41,8 @@
         <div class="collapse" id="convrtrCollapse">
             <div class="grid">
                 <div class="form-check form-switch text-star g-col-12 mb-3">
-                    <input class="form-check-input" type="checkbox" role="switch" id="chainDecoders">
-                    <label class="form-check-label" for="chainDecoders" aria-label="Chain decoders together">Chain decoders</label>
+                    <input class="form-check-input" type="checkbox" role="switch" id="chainDecoders" aria-checked="false">
+                    <label class="form-check-label" for="chainDecoders">Chain decoders</label>
                 </div>
             </div>
             <div class="grid g-3">
@@ -59,10 +58,12 @@
                                     </label>
                                 </span>
                                 {% if tool.id == "hex" %}
+                                {% assign hexDelimiter = "hex" %}
+                                <label class="visually-hidden" id="hexLabel">Hex Delimiter</label>
                                 {% include "components/delimiter" %}
                                 {% endif %}
                                 {% if tool.id == "morsenary" %}
-                                <select id="morsenarySetting" class="form-select form-select-sm mx-2 ms-auto w-auto" aria-label="Change Binary substitution">
+                                <select id="morsenarySetting" class="form-select form-select-sm mx-2 ms-auto w-auto" aria-label="Change Binary substitution" autocomplete="off">
                                     <option value="default" selected="">. = 0, - = 1</option>
                                     <option value="flipped">. = 1, - = 0</option>
                                 </select>
@@ -80,12 +81,12 @@
                                     </a>
                                 </div>
                             </div>
-                            <textarea placeholder="{{ tool.placeholder }}" rows="6" id="form-{{ tool.id }}" class="form-control data-to-copy active"></textarea>
+                            <textarea placeholder="{{ tool.placeholder }}" rows="6" id="form-{{ tool.id }}" class="form-control data-to-copy active" autocomplete="off"></textarea>
                             <div class="d-flex justify-content-between align-items-center mt-3">
                                 {% if forloop.first == true %}
                                 <button type="button" class="btn btn-md btn-convrtr" id="{{ tool.button-id }}">Encode</button>
                                 {% else %}
-                                <span tabindex="0" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ tool.button-label }}">
+                                <span data-bs-toggle="tooltip" data-bs-placement="top" title="{{ tool.button-label }}">
                                     <button type="button" class="btn btn-md btn-light" id="{{ tool.button-id }}" aria-label="{{ tool.button-label }}">
                                         Decode
                                     </button>
