--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -21,7 +21,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Text tools</span>
                     <div class="card-body text-center">
-                        <textarea  title="Text tools" rows="6" id="toolsTextarea" class="form-control flip-text"></textarea>
+                        <textarea title="Text tools" rows="6" id="toolsTextarea" class="form-control flip-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
@@ -29,7 +29,7 @@
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" for="textToolsSelect">Delimiter</label>
-                                        <select class="form-select" id="textToolsSelect" aria-label="Text tools">
+                                        <select class="form-select" id="textToolsSelect" aria-label="Text tools selector">
                                             <option value="stripspaces" selected="">Strip spaces</option>
                                             <option value="reverse">Reverse</option>
                                             <option value="uppercase">Uppercase</option>
@@ -54,7 +54,7 @@
                                     <div class="row row-cols-auto g-0">
                                         <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
                                             <div class="form-check form-switch text-start">
-                                                <input class="form-check-input" type="checkbox" role="switch" id="chainCommands">
+                                                <input class="form-check-input" type="checkbox" role="switch" id="chainCommands" aria-checked="false">
                                                 <label class="form-check-label" for="chainCommands">Chain commands</label>
                                             </div>
                                         </div>
