--- a/_includes/partials/misc/covenant.liquid
+++ b/_includes/partials/misc/covenant.liquid
@@ -65,10 +65,10 @@
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
-                            <a class="btn btn-md btn-convrtr" id="generateCovenantImage" title="Create an image from Covenant glyphs">Create image</a>
+                            <button role="button" class="btn btn-md btn-convrtr" id="generateCovenantImage" title="Create an image from Covenant glyphs">Create image</button>
                             <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="covImageTransparency">
-                                <label class="form-check-label" for="covImageTransparency">Transparent background</label>
+                                <input class="form-check-input" type="checkbox" role="switch" id="covImageTransparency" aria-checked="false">
+                                <label class="form-check-label" for="covImageTransparency">Transparent background <span class="visually-hidden">for Covenant image</span></label>
                             </div>
                             {% include "components/select-copy-dl" %}
                         </div>
