--- a/_includes/partials/misc/forerunner.liquid
+++ b/_includes/partials/misc/forerunner.liquid
@@ -66,10 +66,10 @@
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
-                            <a class="btn btn-md btn-convrtr" id="generateForerunnerImage" title="Create an image from Forerunner glyphs">Create image</a>
+                            <button role="button" class="btn btn-md btn-convrtr" id="generateForerunnerImage" title="Create an image from Forerunner glyphs">Create image</button>
                             <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="frImageTransparency">
-                                <label class="form-check-label" for="frImageTransparency">Transparent background</label>
+                                <input class="form-check-input" type="checkbox" role="switch" id="frImageTransparency" aria-checked="false">
+                                <label class="form-check-label" for="frImageTransparency">Transparent background <span class="visually-hidden">for Forerunner image</span></label>
                             </div>
                             {% include "components/select-copy-dl" %}
                         </div>
