Fix additional missing textarea labels

--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -21,7 +21,8 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Flip Text</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: TEST → ┴SƎ┴" title="Flip text upside down" rows="6" id="flipText" class="form-control flip-text" autocomplete="off"></textarea>
+                        <label for="flipText" class="visually-hidden">Flip text upside down</label>
+                        <textarea placeholder="Example: TEST → ┴SƎ┴" rows="6" id="flipText" class="form-control flip-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
