--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -21,7 +21,8 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Text tools</span>
                     <div class="card-body text-center">
-                        <textarea title="Text tools" rows="6" id="toolsTextarea" class="form-control flip-text" autocomplete="off"></textarea>
+                        <label class="visually-hidden" for="toolsTextarea">Text tools</label>
+                        <textarea rows="6" id="toolsTextarea" class="form-control flip-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
