--- a/_includes/partials/home/replace.liquid
+++ b/_includes/partials/home/replace.liquid
@@ -22,7 +22,8 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Replace characters</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: TESTING → ST → EA → TEASING" title="Replace characters in a string" rows="6" id="replaceText" class="form-control replace-text" autocomplete="off"></textarea>
+                        <label for="replaceText" class="visually-hidden">Replace characters in a string</label>
+                        <textarea placeholder="Example: TESTING → ST → EA → TEASING" rows="6" id="replaceText" class="form-control replace-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-2 g-0">
