--- a/_includes/partials/home/convrtrs.liquid
+++ b/_includes/partials/home/convrtrs.liquid
@@ -1,7 +1,7 @@
 <section id="convrtrs" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading">
-            <div class="d-flex justify-content-between section-toggle"
+            <a class="d-flex justify-content-between section-toggle text-dark text-decoration-none"
                 data-bs-toggle="collapse" href="#convrtrCollapse" role="button" 
                 aria-expanded="true" aria-controls="convrtrCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
@@ -10,7 +10,7 @@
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
-            </div>
+            </a>
             <hr>
             <p class="px-2">
                 A description of each decoder and link to more information is available using the info button in the top-right of each decoder, ou can also copy the contents on individual decoders and download the contents to a text file. By selecting the "chain decoders" option, the "decode" button under each decode switches its target to the Text decoder.
