--- a/_includes/partials/home/replace.liquid
+++ b/_includes/partials/home/replace.liquid
@@ -1,7 +1,7 @@
 <section id="replace" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <div class="d-flex justify-content-between section-toggle"
+            <a class="d-flex justify-content-between section-toggle text-dark text-decoration-none"
                 data-bs-toggle="collapse" href="#replaceCollapse" role="button" 
                 aria-expanded="false" aria-controls="replaceCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
@@ -10,7 +10,7 @@
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
-            </div>
+            </a>
             <hr>
             <p class="px-2">
                 Replace characters in a string - allows replace any characters or phrases in a string with any character or phrase. 
