--- a/_includes/partials/ciphers/caesar.liquid
+++ b/_includes/partials/ciphers/caesar.liquid
@@ -1,7 +1,7 @@
 <section id="rotate" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <div class="d-flex justify-content-between section-toggle"
+            <a class="d-flex justify-content-between section-toggle text-dark text-decoration-none"
                 data-bs-toggle="collapse" href="#rotCollapse" role="button" 
                 aria-expanded="true" aria-controls="rotCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
@@ -10,7 +10,7 @@
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
-            </div>
+            </a>
             <hr>
             <p class="px-2">
                 A very simple method of encription, the Caesar cipher - also known as a shift cipher - 'shifts' the alphabet a certain number of spaces, pushing the letters at the end to the beginning.
