--- a/_includes/partials/files/filecheck.liquid
+++ b/_includes/partials/files/filecheck.liquid
@@ -1,7 +1,7 @@
 <section id="filecheck" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <div class="d-flex justify-content-between section-toggle"
+            <a class="d-flex justify-content-between section-toggle text-dark text-decoration-none"
                 data-bs-toggle="collapse" href="#filecheckCollapse" role="button" 
                 aria-expanded="true" aria-controls="filecheckCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
@@ -10,7 +10,7 @@
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
-            </div>
+            </a>
             <hr>
             <p class="px-2">
                 Select a file to check its file type / header. Only the first 16 bytes of each file are read and then discarded, no files are actually uploaded or stored anywhere.
