--- a/_includes/partials/misc/forerunner.liquid
+++ b/_includes/partials/misc/forerunner.liquid
@@ -1,7 +1,7 @@
 <section id="forerunner" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <div class="d-flex justify-content-between section-toggle"
+            <a class="d-flex justify-content-between section-toggle text-dark text-decoration-none"
                 data-bs-toggle="collapse" href="#forerunnerCollapse" role="button" 
                 aria-expanded="true" aria-controls="forerunnerCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
@@ -10,7 +10,7 @@
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
                 </span>
-            </div>
+            </a>
             <hr>
             <p class="px-2">
                 Convert Forerunner glyphs from the video game <a href="https://www.halowaypoint.com/" title="HaloWaypoint.com - the official site for the Halo universe" class="text-convrtr">Halo</a> to their text alternative, these glyphs were primarily used during an <a href="https://www.halopedia.org/Section_3_ARG" title="Halopedia - Section 3 ARG" class="text-convrtr">ARG</a> for Halo 4. The "Create image" button downloads an image version of the glyphs selected and displayed below the text version.
