--- a/_includes/partials/hex/shift.liquid
+++ b/_includes/partials/hex/shift.liquid
@@ -2,7 +2,7 @@
 <section id="shift" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <a class="d-flex justify-content-between section-toggle text-dark text-decoration-none"
+            <a class="d-flex justify-content-between section-toggle text-decoration-none"
                 data-bs-toggle="collapse" href="#shiftHexCollapse" role="button" 
                 aria-expanded="true" aria-controls="shiftHexCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
