--- a/_includes/layout/header.liquid
+++ b/_includes/layout/header.liquid
@@ -1,16 +1,17 @@
 <header>
     <nav id="navbar" class="navbar fixed-top navbar-dark bg-convrtr shadow-sm">
         <div class="container-fluid mw">
-            <a href="{% if data.environment == 'development' %}http://localhost:8088/{% else %}{{ pkg.homepage }}{% endif %}" class="navbar-brand text-white mb-0 h1 fw-normal me-auto me-md-3" title="Home">
+            <a href="{% if data.environment == 'development' %}http://localhost:8088/{% else %}{{ pkg.homepage }}{% endif %}" 
+               class="navbar-brand text-white mb-0 h1 fw-light me-auto me-md-3" title="Home">
                 {% if data.environment == 'development' %}<i class="bi bi-braces-asterisk"></i> {% endif %}{{ pkg.sitename }}
             </a>
             <div class="d-flex">
-                <span class="navbar-text text-white mx-0 mx-md-3 d-none d-sm-block">
+                <span class="navbar-text text-white mx-0 mx-md-3 fs-5">
                     {{ pkg.tagline }}
                 </span>
                 <ul class="navbar-nav mx-0 mx-md-2 flex-row">
                     <li class="nav-item">
-                        <a class="btn btn-sm btn-link text-light" aria-label="Discord support server" 
+                        <a class="btn btn-md btn-link text-light" aria-label="Discord support server" 
                             title="Discord" href="{{ pkg.support }}" title="Discord"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
                             <i class="bi bi-discord"></i>
@@ -18,7 +19,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-sm btn-link text-light" aria-label="Github code repository" 
+                        <a class="btn btn-md btn-link text-light" aria-label="Github code repository" 
                             title="Github" href="{{ pkg.repository.site }}" title="Github"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
                             <i class="bi bi-github"></i>
@@ -27,7 +28,7 @@
                     </li>
                 {% if page-id != "fourohfour" %}
                     <li class="nav-item">
-                        <button type="button" class="btn btn-sm text-light btn-reset-data" id="resetData" 
+                        <button type="button" class="btn btn-md btn-link text-light btn-reset-data" id="resetData" 
                                 aria-label="Clear all data inside textareas" title="Clear data"
                                 data-bs-toggle="tooltip" data-bs-placement="bottom">
                             <i class="bi bi-recycle"></i>
@@ -36,7 +37,7 @@
                     </li>
                 {% endif %}
                     <li class="nav-item dropdown" data-bs-toggle="tooltip" data-placement="bottom" data-bs-trigger="hover" data-bs-title="Toggle theme">
-                        <button class="btn btn-sm text-light dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" 
+                        <button class="btn btn-md btn-link btn-theme text-light dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" 
                         aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)" 
                         data-current-icon="bi-circle-half">
                             <i class="bi my-1 theme-icon-active bi-circle-half"></i>
