--- a/_includes/partials/misc/forerunner.liquid
+++ b/_includes/partials/misc/forerunner.liquid
@@ -1,7 +1,7 @@
 <section id="forerunner" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
-            <a class="d-flex justify-content-between section-toggle text-dark text-decoration-none"
+            <a class="d-flex justify-content-between section-toggle text-decoration-none"
                 data-bs-toggle="collapse" href="#forerunnerCollapse" role="button" 
                 aria-expanded="true" aria-controls="forerunnerCollapse">
                 <h2 class="display-6 w-100 d-flex m-0">
